2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-vu-output): Define.
	(poke-vu-filter): Accumulate output.
	(poke-vu): Initialize poke-vu-output.

2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke): Better window layout.
	(poke-out-iter-string): Quote face symbol.

2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-exit): Simplify.
	(poke-out-filter): Remove debug code.
	(poke-debug-p): Remove.

2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-iter-string-face): Define.
	(poke-out-iter-string): Likewise.
	(poke-out-filter): Insert iterator separator string and update
	cursor in all windows showing *poke-out* after iterations.
	(poke-out-got-output): Define.

2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-set-omode): New function.
	(poke-set-pretty-print): Likewise.
	(poke-vu-next-line): Improve.
	(poke-vu-mode): Add a header line with a ruler.

2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-styling-faces): Fix faces names.
	(poke-out-filter): Move proces marker whenever necessary.
	(poke-open-file): s/E_generic_io/E-io.

2022-03-11  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/diff.pk: Load pk-table.pk.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/pk-dump-minimal.pk (dump): Remove classes.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (VUCMD_FINISH): New macro.
	(main): Send VUCMD_FINISH to signal the end-of-vu.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (VUKIND_CLEAR): s/VUKIND_/VUCMD_/.
	(VUKIND_APPEND): Likewise.
	(VUCMD_HIGHLIGHT): New macro.
	(VUCMD_FILTER): Likewise.
	(termout_vu_append): Update.
	(main): Send VUCMD_FILTER before other vu stuff.
	* poked/poked.pk (vu_ios): Remove.
	(__vu_rng): Likewise.
	(__vu_filter): New variable.
	(vu): Add two new args: `filt` and `filts`.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
